# git-work

./: Cargo.toml  build.rs  flake.nix  license-mit  readme.md
.github/workflows/: ci.yml
src/: main.rs
