[package]
name = "git-work"
description = "A git-subcommand to create branches following conventional-commits names"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mainrs/git-work"
version = "0.1.0"
authors = ["mainrs <5113257+mainrs@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"
git2 = { version = "0.13", default-features = false }
heck = "0.3"

[build-dependencies]
anyhow = "1"
heck = "0.3"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
